[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/sprites/sample_fantasy.png" type="Texture" id=1]
[ext_resource path="res://menu/scenes/settingsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/scenes/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/sprites/Font/kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://menu/scenes/quitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 58
font_data = ExtResource( 4 )

[node name="menu" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 6 )

[node name="MenuBackground" type="Sprite" parent="."]
self_modulate = Color( 0.396078, 0.419608, 0.498039, 1 )
position = Vector2( 569, 351 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )

[node name="PlayBTN" parent="." instance=ExtResource( 3 )]
margin_left = 417.0
margin_top = 430.0
margin_right = 607.0
margin_bottom = 479.0

[node name="settingsButton" parent="." instance=ExtResource( 2 )]
margin_left = 356.0
margin_top = 430.0
margin_right = 405.0
margin_bottom = 479.0

[node name="QuitButton" parent="." instance=ExtResource( 5 )]
margin_left = 619.0
margin_top = 430.0
margin_right = 668.0
margin_bottom = 479.0

[node name="game_name" type="Label" parent="."]
modulate = Color( 0.0470588, 0.85098, 0.956863, 1 )
margin_left = 465.0
margin_top = 276.0
margin_right = 1006.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 1 )
text = "GAMENAME"

[node name="welcome to" type="Label" parent="."]
margin_left = 194.0
margin_top = 189.0
margin_right = 735.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
text = "WELCOME TO "

[connection signal="pressed" from="PlayBTN" to="." method="_on_PlayBTN_pressed"]
[connection signal="pressed" from="settingsButton" to="." method="_on_settingsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
